# SLIM_Framework

./: .gitignore  CMakeLists.txt  Instructions.cpp  LivenessPass.cpp
include/: IR.h  LivenessPass.h
slim_test/: CMakeLists.txt  main.cpp  test.c
